fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,4 @@
-body {
-  overflow-y: hidden;
-}
+
 a{
   text-decoration: none !important;
 }
